--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="hero-section">
         <div class="container">
-            <h1>Welcome to Musa's Domain</h1>
+            <h1>Welcome to Muza's Domain</h1>
             <p>I'm an coding master ready to conquer the world with my skills.</p>
             <a href="#about" class="btn">Learn More</a>
         </div>
@@ -54,7 +54,7 @@
 
     <footer class="footer-section">
         <div class="container">
-            <p>&copy; 2024 Your Lordship's Portfolio. All Rights Reserved.</p>
+            <p>&copy; 2024 Muzaffar's Portfolio. All Rights Reserved.</p>
             <p>Follow me on:
                 <a href="#">Twitter</a> |
                 <a href="#">LinkedIn</a> |
